# barq

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  USER_GUIDE.md  coffee.yml  flake.nix
.github/workflows/: build.yml
barq-common/: Cargo.toml
barq-common/src/: graph.rs  lib.rs  strategy.rs
barq-common/src/algorithms/: dijkstra.rs  direct.rs  mod.rs
barq-common/src/algorithms/probabilistic/: mod.rs
barq-plugin/: Cargo.toml
barq-plugin/src/: main.rs  plugin.rs
barq-plugin/src/methods/: bolt12.rs  mod.rs  pay.rs  route_info.rs
barq-plugin/src/methods/graph/: cln.rs  mod.rs  p2p.rs
barq-plugin/src/methods/tt/: offer.rs
barq-plugin/src/methods/utils/: graph.rs
tests/: pyproject.toml  test_simple.py
