[package]
name = "barq-common"
version = "0.0.1"
edition = "2021"


[dependencies]
# General dependencies
serde = { workspace = true }
anyhow = { workspace = true }
log = "0.4"

# Dependencies to visualize the graph
petgraph = "0.6"

# Dependencies to use LDK routing strategy
# Note: For now, using ldk_logger branch of lampo.rs (should be merged the next release)
lampo-common = { git = "https://github.com/vincenzopalazzo/lampo.rs.git", branch = "next" }
