[package]
name = "barq-plugin"
version = "0.0.1"
edition = "2021"


[dependencies]
# General dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"

# Core lightning-rpc dependencies
clightningrpc = { git = "https://github.com/laanwj/cln4rust.git" }
clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git" }
clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", features = [
    "log",
] }
clightningrpc-plugin-macros = { git = "https://github.com/laanwj/cln4rust.git" }

# Barq dependencies
barq-common = { path = "../barq-common" }
