[package]
name = "barq-plugin"
version = "0.0.1"
edition = "2021"


[dependencies]
# General dependencies
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

# Core lightning-rpc dependencies
clightningrpc = { git = "https://github.com/laanwj/cln4rust.git" }
clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git" }
clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git" }
clightningrpc-plugin-macros = { git = "https://github.com/laanwj/cln4rust.git" }
# Note: For now, I am using my own fork of cln4rust (`GossipMap` type needs to be public)
clightningrpc_gossip_map = { git = "https://github.com/tareknaser/cln4rust.git", branch = "gossip_map" }

# Barq dependencies
barq-common = { path = "../barq-common" }
